force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__FilterField__c.field-meta.xml
<CustomField>
    <fullName>sbaa__FilterField__c</fullName>
    <description>Select the field to use when filtering items for inclusion in this approval variable.</description>
    <inlineHelpText>Select the field to use when filtering items for inclusion in this approval variable.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sbaa__TargetObject__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product Family</fullName>
            </value>
            <value>
                <fullName>Product_Code__c</fullName>
                <label>Product Code</label>
            </value>
            <value>
                <fullName>Order_Type__c</fullName>
                <label>Order Type</label>
            </value>
            <value>
                <fullName>Requires_Technical_Review__c</fullName>
                <label>Requires Technical Review</label>
            </value>
            <value>
                <fullName>SBQQ__Discount__c</fullName>
                <label>SBQQ Discount</label>
            </value>
            <value>
                <fullName>Sourcing_Restrictions__c</fullName>
                <label>Sourcing Restrictions</label>
            </value>
            <value>
                <fullName>Custom_T_C_Attached__c</fullName>
                <label>Custom Terms And Conditions</label>
            </value>
            <value>
                <fullName>Non_Discountable_List_Price__c</fullName>
                <label>Non Discountable List Price</label>
            </value>
            <value>
                <fullName>SBQQ__ListPrice__c</fullName>
                <label>SBQQ List Price</label>
            </value>
            <value>
                <fullName>Zero_Priced_Line__c</fullName>
                <label>Zero Priced Line</label>
            </value>
            <value>
                <fullName>Requires_Inside_Sales_Approval__c</fullName>
                <label>Requires Inside Sales Approval</label>
            </value>
            <value>
                <fullName>Requires_Sales_Director_Approval__c</fullName>
                <label>Requires Sales Director Approval</label>
            </value>
            <value>
                <fullName>Requires_Sales_Executive_Approval__c</fullName>
                <label>Requires Sales Executive Approval</label>
            </value>
            <value>
                <fullName>Discount_Greater_0__c</fullName>
                <label>Discount &gt; 0</label>
            </value>
            <value>
                <fullName>Discount_Greater_20__c</fullName>
                <label>Discount &gt; 20%</label>
            </value>
            <value>
                <fullName>Discount_Greater_30__c</fullName>
                <label>Discount &gt; 30%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>